--- a/ui/player-carousel.reel/player-carousel.css
+++ b/ui/player-carousel.reel/player-carousel.css
@@ -97,23 +97,7 @@ FLOW
 
 /* basketball */
 
-.flow-Ribbon > div:before {
-    content: "";
-    position: absolute;
-    background-image: url(../../assets/image/basketball2d-edit.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    border-radius: 50%;
-    width:  500px;
-    height: 500px;
-    top:  50%;
-    left: 50%;
-    -webkit-transform: translate3d(-50%, -50%, 600px) scale3d(2.2, 2.2, 1);
-            transform: translate3d(-50%, -50%, 600px) scale3d(2.2, 2.2, 1);
-    box-shadow: inset 0 0 100px 70px rgba(0,0,0,0.5),
-                    0 0 20px 0px rgba(0,0,0,.8),
-                    0 0 70px 0px rgba(0,0,0,.9);
-    pointer-events: none;
+.basketball {
+    height: 1500px;
 }
 
