--- a/ui/timer.reel/timer.css
+++ b/ui/timer.reel/timer.css
@@ -30,7 +30,6 @@
     display: inline-block;
     font-size: 2.5em;
     line-height: .8;
-    font-weight: 600;
     color: red;
     margin-right: 1em;
 }
